Miglioramento icone fontAwesome

--- a/public/css/style-main.css
+++ b/public/css/style-main.css
@@ -64,6 +64,10 @@ a {
   display: none;
 }
 
+.input-group-text {
+  background-color: white;
+}
+
 /* Media queries per l'adattamento a dispositivi mobili */
 @media screen and (max-width: 600px) {
   footer {
