--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -70,7 +70,7 @@
                                         placeholder="Inserisci la password attuale"/>
 
                                     <!-- Mostra la password -->
-                                    <div class="input-group-text" onclick="showSetPwd0()"><i class="fa fa-eye"></i></div>
+                                    <div class="input-group-text" onclick="showSetPwd0()"><i class="fa fa-eye" id="pwdEye0"></i></div>
                                 </div>
                             </div>
 
@@ -83,7 +83,7 @@
                                             placeholder="Inserisci una nuova password" onchange="checkLghSet()"/>
 
                                         <!-- Mostra la password -->
-                                        <div class="input-group-text" onclick="showSetPwd1()"><i class="fa fa-eye"></i></div>
+                                        <div class="input-group-text" onclick="showSetPwd1()"><i class="fa fa-eye" id="pwdEye1"></i></div>
                                     </div>
                                 </div>
 
@@ -95,7 +95,7 @@
                                             placeholder="Ripeti password" onchange='checkPwdMatch()'/>
 
                                         <!-- Mostra la password -->
-                                        <div class="input-group-text" onclick="showSetPwd2()"><i class="fa fa-eye"></i></div>
+                                        <div class="input-group-text" onclick="showSetPwd2()"><i class="fa fa-eye" id="pwdEye2"></i></div>
                                     </div>
                                 </div>
                             </div>
