--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -55,7 +55,7 @@
                     onchange='checkLgh()' required />
 
                   <!-- Mostra password -->
-                  <div class="input-group-text" onclick="showPwd()"><i class="fa fa-eye"></i></div>
+                  <div class="input-group-text" onclick="showPwd()"><i class="fa fa-eye" id="pwdEye1"></i></div>
                 </div>
 
                 <!-- Password repeat -->
@@ -65,7 +65,7 @@
                     id="password_repeat" onchange='checkPwdMatch()' required />
 
                   <!-- Mostra password -->
-                  <div class="input-group-text" onclick="showPwd2()"><i class="fa fa-eye"></i></div>
+                  <div class="input-group-text" onclick="showPwd2()"><i class="fa fa-eye" id="pwdEye2"></i></div>
                 </div>
 
                 <!-- Messaggio di errore -->
