--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -29,7 +29,7 @@
                   <input type="password" class="form-control" name="password" placeholder="Password" id="password" required/>
                   
                   <!-- Mostra password -->
-                  <div class="input-group-text" onclick="showPwd()"><i class="fa fa-eye"></i></div>
+                  <div class="input-group-text" onclick="showPwd()"><i class="fa fa-eye" id="pwdEye"></i></div>
                 </div>
 
                 <!-- Remember me -->
