Modifiche di stile

--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -7,21 +7,30 @@
         <!-- Account page navigation-->
 
         <hr class="mt-0 mb-4">
-        <div class="row">
+        <div class="row justify-content-center">
             <!-- Rimozione account (solo utenti standard) -->
             {{#if privilegi}}
             <div class="col-xl-4">
                 <div class="card mb-4">
                     <div class="card-header">Il tuo profilo</div>
                     <div class="card-body">
-                        Rimuovi il mio account.<br>
-                        Attenzione: continuando il tuo account verrà rimosso dai nostri sistemi e perderai
-                        tutte le prenotazioni.<br>
+                        <p>
+                            Rimuovi il mio account.<br>
+                            Attenzione: continuando il tuo account verrà rimosso dai nostri sistemi e perderai
+                            tutte le prenotazioni.<br>
+                        </p>
 
                         <!-- Rimuovi l'account -->
-                        <a href="/deleteUser">
-                            <button class="btn btn-danger mt-3" id='btnDeleteAccount'>Elimina il mio account</button>
-                        </a>
+                        <form action="/deleteUser" method="GET">
+                            <div>
+                                <input type="checkbox" required/>
+                                Sono consapevole della perdita di tutti i miei dati
+                            </div>
+
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-danger" id='btnDeleteAccount'>Elimina il mio account</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -31,11 +40,12 @@
             {{#if privilegi}}
             <div class="col-xl-8">
             {{else}}
-            <div class="col-xl-12">
+            <div class="col-xl-8">
             {{/if}}
                 <!-- Form -->
                 <div class="card mb-4">
-                    <div class="card-header">Il tuo account
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        Il tuo account
                         <button class="btn btn-primary" onclick="enableChanges()" id="btnModifica">Modifica</button>
                     </div>
                     <div class="card-body">
@@ -45,28 +55,28 @@
                                 <div class="col-md-6">
                                     <label class="small mb-1" for="nome">Nome</label>
                                     <input class="form-control" id="nome" name="nome" type="text" 
-                                        placeholder="Inserire nome" value="{{nome}}" readonly/>
+                                        placeholder="Inserire nome" value="{{nome}}" readonly required/>
                                 </div>
 
                                 <!-- Cognome -->
                                 <div class="col-md-6">
                                     <label class="small mb-1" for="cognome">Cognome</label>
                                     <input class="form-control" id="cognome" name="cognome" type="text" 
-                                        placeholder="Inserire cognome" value="{{cognome}}" readonly/>
+                                        placeholder="Inserire cognome" value="{{cognome}}" readonly required/>
                                 </div>
                             </div>
 
                             <div class="mb-3">
                                 <!-- Data di nascita -->
                                 <label class="small mb-1" for="data">Data di nascita</label> 
-                                <input class="form-control" type="date" id="data" name="data" value="{{data}}" readonly/>
+                                <input class="form-control" type="date" id="data" name="data" value="{{data}}" readonly required/>
                             </div>
 
                             <div class="mb-3">
                                 <!-- Password attuale -->
                                 <label class="small mb-1" for="oldPsw">Password attuale</label>
                                 <div class="input-group">
-                                    <input class="form-control" type="password" id="oldPsw" name="oldPsw" readonly
+                                    <input class="form-control" type="password" id="oldPsw" name="oldPsw" readonly required
                                         placeholder="Inserisci la password attuale"/>
 
                                     <!-- Mostra la password -->
@@ -79,7 +89,7 @@
                                 <div class="col-md-6">
                                     <label class="small mb-1" for="password">Nuova password</label>
                                     <div class="input-group">
-                                        <input class="form-control" id="password" type="password" name="password" readonly
+                                        <input class="form-control" id="password" type="password" name="password" readonly required
                                             placeholder="Inserisci una nuova password" onchange="checkLghSet()"/>
 
                                         <!-- Mostra la password -->
@@ -91,7 +101,7 @@
                                 <div class="col-md-6">
                                     <label class="small mb-1" for="password_repeat">Ripeti password</label>
                                     <div class="input-group">
-                                        <input class="form-control" id="password_repeat" type="password" name="psw-repeat" readonly
+                                        <input class="form-control" id="password_repeat" type="password" name="psw-repeat" readonly required
                                             placeholder="Ripeti password" onchange='checkPwdMatch()'/>
 
                                         <!-- Mostra la password -->
@@ -104,7 +114,10 @@
                             <div class="form-outline mb-3 text-danger" id='message'>{{error}}</div>
                             
                             <!-- Salva le modifiche -->
-                            <button class="btn btn-primary" id='btnSubmit' type="submit" hidden>Conferma</button>
+                            <div class="text-center">
+                                <button class="btn btn-primary" id='btnSubmit' type="submit" hidden>Conferma</button>
+                                <button class="btn btn-secondary" id='btnReset' type="reset" hidden>Cancella</button>
+                            </div>
                         </form>
                     </div>
                 </div>
