--- a/public/css/style-main.css
+++ b/public/css/style-main.css
@@ -60,6 +60,10 @@ a {
   display: none;
 }
 
+.gradient-custom-4 {
+  background: linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1))
+}
+
 .buttons-par, #luogo, #organizzatore {
   display: none;
 }
