--- a/public/css/style-profile.css
+++ b/public/css/style-profile.css
@@ -35,6 +35,10 @@ footer {
     background-color: white;
 }
 
+.gradient-custom-4 {
+    background: linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1))
+}
+
 /* Media queries per l'adattamento a dispositivi mobili */
 @media screen and (max-width: 600px) {
     footer {
