--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -5,11 +5,11 @@
     <a href="/"
         class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
         <!-- Aspetto dell'immagine originale: 3.66:1 -->
-        <img src="img/icon-transparent.png" alt="home" width="150" height="41" class=""/>
+        <img src="img/icon-transparent.png" alt="home" width="150" height="41"/>
     </a>
 
     <ul class="nav col-md-4 justify-content-end px-4">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+        <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQ</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contatti</a></li>
     </ul>
