--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,5 +1,5 @@
 <!-- Header -->
-<header class="p-3 mb-3 border-bottom">
+<header class="p-3 mb-3 border-bottom gradient-custom-4">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <!-- Logo -->
