--- a/views/partials/main-listing.handlebars
+++ b/views/partials/main-listing.handlebars
@@ -1,4 +1,4 @@
-<div class="listing jumbotron container border border-dark rounded mb-3" id="e{{id}}">
+<div class="card card-custom mx-3 px-3 mb-3 rounded listing" id="e{{id}}">
     <h3 id="titolo" class="display-6">{{titolo}}</h3>
 
     <!-- Messaggio di errore -->
