Inizio lavoro su immagini di sfondo

--- a/public/css/style-main.css
+++ b/public/css/style-main.css
@@ -63,6 +63,9 @@ a {
 .listing {
   width: 95%;
   display: none;
+  background-size: 60%;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .gradient-custom-4 {
