--- a/views/partials/main-listing.handlebars
+++ b/views/partials/main-listing.handlebars
@@ -1,5 +1,5 @@
 <div class="card card-custom mx-3 px-3 mb-3 rounded listing" id="e{{id}}"
-    style="background-image: url('/img/motocross.png');">
+    style="background-image: url('/img/{{immagine}}');">
     <h3 id="titolo" class="display-6">{{titolo}}</h3>
 
     <!-- Messaggio di errore -->
