Creata tabella ImgMapping per la mappatura nome-titolo

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -167,7 +167,7 @@
                                     <select name="imgEvent" class="form-select" form="creaEvento" required>
                                         <option value="" selected></option>
                                         {{#each images}}
-                                        <option value="{{immagine}}">{{immagine}}</option>
+                                        <option value="{{nome}}">{{titolo}}</option>
                                         {{/each}}
                                         <option value="Altro">Altro</option>
                                     </select>
