--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,14 +1,14 @@
-<section class="bg-image">
-  <div class="mask d-flex align-items-center h-100 gradient-custom-4">
-    <div class="container h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
+<section>
+  <div class="mask d-flex gradient-custom-4">
+    <div class="container">
+      <div class="row d-flex">
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-          <div class="card" style="border-radius: 15px;">
+          <div class="card">
             <div class="card-body p-5">
               
               <a href="/" class="text-center">
                 <!-- Aspetto dell'immagine originale: 3.66:1 -->
-                <img src="img/icon-transparent.png" alt="home" width="250" height="68" />
+                <img src="img/icon-transparent.png" alt="home" width="250" height="68"/>
               </a>
 
               <!-- Form -->
