--- a/public/css/style-main.css
+++ b/public/css/style-main.css
@@ -26,11 +26,14 @@ body {
 header {
     background-color: var(--header-color);
     margin-left: auto;
+    padding: 1rem;
+    margin-bottom: 1rem;
 }
 
 footer {
     background-color: var(--footer-color);
-    padding-top: 3rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     width: 100%;
     position: absolute;
     right: 0;
@@ -71,6 +74,11 @@ a {
     background-color: white;
 }
 
+.d-flex {
+    align-items: center;
+    justify-content: center;
+}
+
 /* Gestione card nella main page */
 .listing {
     width: 95%;
@@ -78,6 +86,11 @@ a {
     background-size: 60%;
     background-repeat: no-repeat;
     background-position: center;
+    margin-bottom: 1rem;
+    margin-left: .5rem;
+    margin-right: .5rem;
+    padding-left: .25rem;
+    padding-right: .25rem;
 }
 
 .card-deck {
@@ -108,6 +121,8 @@ a {
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 .card-back {
