--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,49 +1,51 @@
 <!-- Header -->
-<header class="p-3 mb-3 border-bottom gradient-custom-4">
-    <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <!-- Logo -->
-            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none me-lg-3">
-                <!-- Aspetto dell'immagine originale: 3.66:1 -->
-                <img src="img/icon-transparent.png" alt="home" width="120" height="33"/>
-            </a>
+<header class="border-bottom gradient-custom-4">
+  <div class="container">
+    <div class="d-flex flex-wrap">
+      <!-- Logo -->
+      <a href="/" class="me-3">
+        <!-- Aspetto dell'immagine originale: 3.66:1 -->
+        <img src="img/icon-transparent.png" alt="home" width="120" height="33" />
+      </a>
 
-            <!-- Navbar -->
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="/highlights" class="nav-link px-2 link-dark">Highlights</a></li>
-                <li><a href="/nexts" class="nav-link px-2 link-dark">Prossimamente</a></li>
-                <li><a href="/passed" class="nav-link px-2 link-dark">Eventi conclusi</a></li>
-            </ul>
+      <!-- Navbar -->
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="/highlights" class="nav-link px-2 link-dark">Highlights</a></li>
+        <li><a href="/next" class="nav-link px-2 link-dark">Prossimamente</a></li>
+        <li><a href="/passed" class="nav-link px-2 link-dark">Eventi conclusi</a></li>
+      </ul>
 
-            <!-- Barra di ricerca -->
-            <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-                <div class="input-group">
-                    <input id="src" type="search" onchange="search()" class="form-control" placeholder="Cerca evento..." aria-label="Search">
-                    <div class="input-group-text"><i class="fa fa-search"></i></div>
-                </div>
-            </div>
-
-            <!-- Dropdown/buttons se loggato -->
-            {{#if log}}
-                <div class="dropdown text-end">
-                    <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Ciao {{utente}}
-                    </a>
-                    <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-                        <li><a class="dropdown-item" href="settings">Impostazioni</a></li>
-                        <li><a class="dropdown-item" href="profile">Il mio profilo</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="logout">Esci</a></li>
-                    </ul>
-                </div>
-            {{else}}
-                <div class="text-end">
-                    <a href="login"><button class="btn btn-primary btn-login">Accedi</button></a>
-                    <a href="signup"><button class="btn btn-primary btn-login">Registrati</button></a>
-                </div>
-            {{/if}}
-            
+      <!-- Barra di ricerca -->
+      <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+        <div class="input-group">
+          <input id="src" type="search" onchange="search()" class="form-control" placeholder="Cerca evento..."/>
+          <div class="input-group-text"><i class="fa fa-search"></i></div>
         </div>
+      </div>
+
+      <!-- Dropdown/buttons se loggato -->
+      {{#if log}}
+      <div class="dropdown text-end">
+        <a href="#" class="d-block link-dark dropdown-toggle" id="dropdownUser1"
+          data-bs-toggle="dropdown" aria-expanded="false">
+          Ciao {{utente}}
+        </a>
+        <ul class="dropdown-menu text-small">
+          <li><a class="dropdown-item" href="settings">Impostazioni</a></li>
+          <li><a class="dropdown-item" href="profile">Il mio profilo</a></li>
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+          <li><a class="dropdown-item" href="logout">Esci</a></li>
+        </ul>
+      </div>
+      {{else}}
+      <div class="text-end">
+        <a href="login"><button class="btn btn-primary btn-login">Accedi</button></a>
+        <a href="signup"><button class="btn btn-primary btn-login">Registrati</button></a>
+      </div>
+      {{/if}}
+
     </div>
+  </div>
 </header>
