--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -4,9 +4,7 @@
 
   <div class="container-xl px-4 mt-4">
 
-    <hr class="mt-0 mb-4">
     <div class="row justify-content-center">
-
       <!-- Rimozione account (solo utenti standard) -->
       {{#if privilegi}}
       <div class="col-xl-4">
@@ -27,7 +25,7 @@
               </div>
 
               <div class="text-center">
-                <button type="submit" class="btn btn-danger" id='btnDeleteAccount'>Elimina il mio account</button>
+                <button type="submit" class="btn btn-danger" id="btnDeleteAccount">Elimina il mio account</button>
               </div>
             </form>
           </div>
@@ -39,7 +37,7 @@
       <div class="col-xl-8">
         <!-- Form -->
         <div class="card mb-4">
-          <div class="card-header d-flex justify-content-between align-items-center">
+          <div class="card-header d-flex justify-content-between">
             Il tuo account
             <button class="btn btn-primary" onclick="enableChanges()" id="btnModifica">Modifica</button>
           </div>
@@ -48,14 +46,14 @@
               <div class="row gx-3 mb-3">
                 <!-- Nome -->
                 <div class="col-md-6">
-                  <label class="small mb-1" for="nome">Nome</label>
+                  <label class="small" for="nome">Nome</label>
                   <input class="form-control" id="nome" name="nome" type="text" placeholder="Inserire nome"
                     value="{{nome}}" readonly required />
                 </div>
 
                 <!-- Cognome -->
                 <div class="col-md-6">
-                  <label class="small mb-1" for="cognome">Cognome</label>
+                  <label class="small" for="cognome">Cognome</label>
                   <input class="form-control" id="cognome" name="cognome" type="text" placeholder="Inserire cognome"
                     value="{{cognome}}" readonly required />
                 </div>
@@ -63,13 +61,13 @@
 
               <div class="mb-3">
                 <!-- Data di nascita -->
-                <label class="small mb-1" for="data">Data di nascita</label>
+                <label class="small" for="data">Data di nascita</label>
                 <input class="form-control" type="date" id="data" name="data" value="{{data}}" readonly required />
               </div>
 
               <div class="mb-3">
                 <!-- Password attuale -->
-                <label class="small mb-1" for="oldPsw">Password attuale</label>
+                <label class="small" for="oldPsw">Password attuale</label>
                 <div class="input-group">
                   <input class="form-control" type="password" id="oldPsw" name="oldPsw" readonly required
                     placeholder="Inserisci la password attuale" />
@@ -82,7 +80,7 @@
               <div class="row gx-3 mb-3">
                 <!-- Password nuova -->
                 <div class="col-md-6">
-                  <label class="small mb-1" for="password">Nuova password</label>
+                  <label class="small" for="password">Nuova password</label>
                   <div class="input-group">
                     <input class="form-control" id="password" type="password" name="password" readonly required
                       placeholder="Inserisci una nuova password" onchange="checkLghSet()" />
@@ -94,10 +92,10 @@
 
                 <!-- Ripeti password nuova -->
                 <div class="col-md-6">
-                  <label class="small mb-1" for="password_repeat">Ripeti password</label>
+                  <label class="small" for="password_repeat">Ripeti password</label>
                   <div class="input-group">
                     <input class="form-control" id="password_repeat" type="password" name="psw-repeat" readonly required
-                      placeholder="Ripeti password" onchange='checkPwdMatch()' />
+                      placeholder="Ripeti password" onchange="checkPwdMatch()" />
 
                     <!-- Mostra la password -->
                     <div class="input-group-text" onclick="showSetPwd2()"><i class="fa fa-eye" id="pwdEye2"></i></div>
@@ -106,12 +104,12 @@
               </div>
 
               <!-- Messaggio di errore -->
-              <div class="form-outline mb-3 text-danger" id='message'>{{error}}</div>
+              <div class="form-outline mb-3 text-danger" id="message">{{error}}</div>
 
               <!-- Salva le modifiche -->
               <div class="text-center">
-                <button class="btn btn-primary" id='btnSubmit' type="submit" hidden>Conferma</button>
-                <button class="btn btn-secondary" id='btnReset' type="reset" hidden>Cancella</button>
+                <button class="btn btn-primary" id="btnSubmit" type="submit" hidden>Conferma</button>
+                <button class="btn btn-secondary" id="btnReset" type="reset" hidden>Cancella</button>
               </div>
             </form>
           </div>
