--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -85,6 +85,7 @@
                 <td>{{dataora}}</td>
                 <td>
                   <button class="btn btn-danger" onclick="unbook({{id}})">Disdici</button>
+                  <button class="btn btn-print" onclick="stampa({{id}})">Stampa</button>
                 </td>
               </tr>
               {{/each}}
