--- a/public/css/style-print.css
+++ b/public/css/style-print.css
@@ -1,10 +1,14 @@
 :root {
     --font-family: Arial, Helvetica, sans-serif;
-    --btn-info-color: rgba(17, 177, 226, 0.534);
-    --btn-prenota-color: rgba(8, 211, 41, 0.603);
+    /* --btn-info-color: rgba(17, 177, 226, 0.534);
+    --btn-prenota-color: rgba(8, 211, 41, 0.603); */
 }
 
 /* Generali */
+body {
+    background-image: url("/img/logo_print.png");
+}
+
 div {
     padding-left: 1rem;
     padding-right: 1rem;
@@ -39,22 +43,22 @@ div.footer {
     justify-content: center;
 }
 
-.btn-print {
+/* .btn-print {
     background-color: var(--btn-prenota-color);
 }
 
 .btn-back {
     background-color: var(--btn-info-color);
-}
+} */
 
 .italic {
     font-style: italic;
 }
 
 @media print {
-    .btn {
+    /* .btn {
         display: none;
-    }
+    } */
 
     @page { 
         margin: 0; 
