--- a/views/print.handlebars
+++ b/views/print.handlebars
@@ -1,9 +1,28 @@
 <body>
-    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+    <!-- Script per la stampa automatica e ritorno alla pagina precedente -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+            // Generazione del QR code per la prenotazione
+            new QRCode($('#qrcode')[0], {
+                text: "email={{email}}|id={{id}}",
+                width: 200,
+                height: 200
+            });
+
+            // Apri la finestra di dialogo di stampa
+            window.print();
+            // Torna alla pagina del profilo
+            setTimeout(() => {
+                window.location.replace("/profile");
+            }, 1000);
+        });
+    </script>
 
     <!-- Aspetto dell'immagine originale: 3.66:1 -->
     <div class="text-center">
-        <img src="img/icon-transparent.png" alt="home" width="360" height="98" />
+        <a href="/">
+            <img src="img/icon-transparent.png" alt="home" width="360" height="98" />
+        </a>
     </div>
 
     {{#each dati}}
@@ -29,15 +48,7 @@
         <div class="header">QR code</div>
         <div class="body">
             <div>Ti verrà chiesto di esibire questo codice all'entrata</div>
-            
             <div id="qrcode"></div>
-            <script type="text/javascript">
-                new QRCode($('#qrcode')[0], {
-                    text: "email={{email}}|id={{id}}",
-                    width: 200,
-                    height: 200
-                });
-            </script>
         </div>
 
         <!-- Footer -->
@@ -46,11 +57,11 @@
         </div>
 
         <!-- Bottone per la stampa e per tornare indietro -->
-        <div class="text-center">
+        <!-- <div class="text-center">
             <button class="btn btn-print btn-lg" onclick="print()">Stampa</button>
 
             <a href="/profile"><button class="btn btn-lg btn-back">Annulla</button></a>
-        </div>
+        </div> -->
     </div>
     {{/each}}
 
